test_scripts/safe_scripts/multi-exec/errors/skipmultipleerrors.js
console.log("script start");
console.log(i);
for (let i in [1,2,3]) {
    if (y === 3) {
        console.log("yes");
    }
}
ach = beh;
console.log("end of script reached (test pass)");
